[package]
authors = ["RuofengX <<i@ruofengx.cn>>"]
categories = ["database"]
description = "An Atomic-like double indexed entity-attribute data structures."
edition = "2021"
keywords = ["database", "atomic", "double-indexed", "entity-attribute", "ecs"]
license = "MIT"
name = "retable"
readme = "README.md"
repository = "https://github.com/RuofengX/retable"
version = "0.7.0-alpha.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.3"
parking_lot = "0.12.1"
rayon = "1.8.0"
zerocopy = "0.7"
zerocopy-derive = "0.7"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "prop"
harness = false
