[package]
authors = ["RuofengX <<i@ruofengx.cn>>"]
categories = ["database"]
description = "An Atomic-like double indexed entity-attribute data structures."
edition = "2021"
keywords = ["database", "atomic", "double-indexed", "entity-attribute", "ecs"]
license = "MIT"
name = "retable"
readme = "README.md"
repository = "https://github.com/RuofengX/retable"
version = "0.7.0-alpha.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.3"
parking_lot = "0.12.1"
rayon = "1.8.0"
sled = { version = "0.34.7", features = ["default", "compression"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "v5"] }
zerocopy = "0.7"
zerocopy-derive = "0.7"

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.9.0"

[[bench]]
name = "prop"
harness = false
